--- a/templates/choose_subject.html
+++ b/templates/choose_subject.html
@@ -2,12 +2,15 @@
 {% block title%}my_courses{% endblock %}
 {% block content %}
 <link rel="stylesheet" type="text/css" href="/static/css/choose_subject.css">
-<div class="container">
-    {% for i in sp_subjects %}
+<h1>Какой предмет?</h1>
+{% for i in sp_subjects %}
+    <div>
     <li class="card">
-        <a class='class' href="/all_subjects/video/{{ i }}">{{ i }}</a>
+        <a class='class' href="/open/{{ type }}/{{ grade }}/{{i}}">{{ i }}</a>
     </li>
+    </div>
     {% endfor %}
+<div>
     <li class="card">
         <a class="class" href="/all_subjects/video/another">Другое</a>
     </li>
